--- a/Fundraising/wwwroot/CMS/PdetailsView.html
+++ b/Fundraising/wwwroot/CMS/PdetailsView.html
@@ -184,7 +184,7 @@
                                                         <h5 class="card-header" v-cloak>{{item.planTitle}}</h5>
                                                         <div class="card-body row p-1">
                                                             <div class="col-4">
-                                                                <img :src="item.planPhoto" alt="" class="img-fuild">
+                                                                <img :src="item.planPhoto" alt="" class="img-fuild w-100">
                                                             </div>
                                                             <div class="col-7">
                                                                 <div class="d-flex justify-content-between">
