--- a/Fundraising/wwwroot/CMS/Employee.html
+++ b/Fundraising/wwwroot/CMS/Employee.html
@@ -43,7 +43,7 @@
                     <!-- 側邊欄位 -->
 
                     <ul class="navbar-nav bg-white col-2 item-style sidebar" id="accordionSidebar"
-                    style="overflow-x: auto;max-height: 750px;">
+                        style="overflow-x: auto;max-height: 750px;">
                         <br>
                         <div id="mysider"></div>
                     </ul>
@@ -62,7 +62,7 @@
                                         <div class="mb-3 col-12">
                                             <form>
                                                 <fieldset>
-                                                    <legend>查詢條件</legend>
+                                                    <legend onclick=app.enterText()>查詢條件</legend>
                                                     <div class="d-flex py-3">
                                                         <div class="mx-3">
                                                             <select name="" id=""
@@ -76,9 +76,12 @@
                                                         </div>
                                                         <div class="pr-3">
 
-                                                            <input type="text" v-model="input.userId"
+                                                            <input type="text" v-model="input.employeeinfo"
                                                                 placeholder="搜尋員工姓名 / Email / 電話"
                                                                 style="min-width: 300px; height: 100%;">
+                                                        </div>
+                                                        <div class="ml-3">
+                                                            <a class="btn btn-success" v-on:click="inputRest">清除</a>
                                                         </div>
                                                     </div>
                                                 </fieldset>
@@ -104,7 +107,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody class="">
-                                                    <tr v-for="item in statuschange">
+                                                    <tr v-for="item in userNameChange">
                                                         <td v-cloak>{{item.name}}</td>
                                                         <td v-cloak>{{item.email}}</td>
                                                         <td v-cloak>{{item.phone}}</td>
@@ -135,12 +138,13 @@
 
 
                             <!-- Modal -->
+                            <!-- 新增 -->
                             <div class="modal fade" id="staticBackdrop" data-backdrop="static" data-keyboard="false"
                                 tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered " style=" max-width: 550px;">
                                     <div class="modal-content" style="border-radius: 5px; border: 0px;">
                                         <div class="modal-body px-4">
-                                            <label for="">帳號*</label> <br>
+                                            <label for="" onclick=app.addemployeeText()>帳號*</label> <br>
                                             <input type="text" class="w-100 mb-1" name="account" placeholder="請輸入6位英數字"
                                                 v-model="addemployee.account">
                                             <label for="">密碼*</label> <br>
@@ -274,8 +278,8 @@
                 employeeList: [],
                 employeeinfo: [],
                 input: {
-                    employeename: "",
-                    employeestatus: "任職狀態"
+                    employeestatus: "任職狀態",
+                    employeeinfo: "",
                 },
                 addemployee: {
                     account: "",
@@ -386,6 +390,27 @@
                         })
 
                     })
+                },
+                addemployeeText: function () {
+                    app.addemployee = {
+                        account: "test",
+                        password: "test",
+                        name: "test",
+                        email: 'test@gmail.com',
+                        phone: "0987654321",
+                        position: "2",
+                        sexy: "0",
+                        status: 1,
+                    }
+
+                },
+                enterText: function () {
+                    app.input.employeeinfo = "123";
+
+                },
+                inputRest: function () {
+                    app.input.employeestatus = "任職狀態";
+                    app.input.employeeinfo = "";
                 }
             },
             computed: {
@@ -399,10 +424,25 @@
                     else {
                         return this.employeeList
                     }
+                },
+                userNameChange() {
+                    if (this.input.employeeinfo) {
+                        return this.statuschange.filter(item => {
+                            if (item.name.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1) {
+                                return item.name.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1
+                            } else if (item.email.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1) {
+                                return item.email.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1
+                            } else if (item.phone.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1) {
+                                return item.phone.toLowerCase().indexOf(this.input.employeeinfo.toLowerCase()) !== -1
+                            }
+                        })
+                    } else {
+                        return this.statuschange
+                    }
                 }
 
             },
-             mounted() {
+            mounted() {
                 let loader = this.$loading.show({
                     loader: 'dots'
                 });
