--- a/Fundraising/wwwroot/CMS/Preview.html
+++ b/Fundraising/wwwroot/CMS/Preview.html
@@ -61,15 +61,18 @@
                                         <div class="mb-3  col-12">
                                             <form>
                                                 <fieldset>
-                                                    <legend>查詢條件</legend>
+                                                    <legend onclick=app.enterText()>查詢條件</legend>
                                                     <div class="d-flex py-3">
                                                         <div class="">
                                                             <label class="px-3" for="">提案負責人:</label>
-                                                            <input type="text" v-model="input.principalName">
+                                                            <input type="text" v-model="input.principalName" style="padding: 5px;">
                                                         </div>
                                                         <div class="">
                                                             <label class="px-3" for="">提案名稱:</label>
-                                                            <input type="text" v-model="input.title">
+                                                            <input type="text" v-model="input.title"  style="padding: 5px;">
+                                                        </div>
+                                                        <div class="ml-3">
+                                                            <a class="btn btn-success" v-on:click="inputRest">清除</a>
                                                         </div>
                                                     </div>
                                                 </fieldset>
@@ -109,11 +112,8 @@
                                     </div>
                                 </div>
                                 <!-- ===============================================================================================================  -->
-
                             </div>
-
                         </div>
-
                     </div>
                     <!-- 結束 主要內容 -->
                 </div>
@@ -177,12 +177,20 @@
                     setTimeout(() => loader.hide(), 3 * 1000);
                 },
                 logout: function () {
-                    // alert("1523 ")
                     axios.get("/api/back/logout").then(res => { if (res.data == "已登出") { window.location.reload() } })
                 },
                 checkmenber: function (a) {
                     sessionStorage.setItem("productId", a);
                 },
+                enterText:function(){
+                    app.input.principalName = "123";
+                    app.input.title= "123";
+                    
+                },
+                inputRest:function(){
+                    app.input.principalName = "";
+                    app.input.title= "";
+                }
             },
             computed: {
                 nameChange() {
@@ -211,9 +219,7 @@
                 axios.get('/api/back/PreProductList')
                     .then((response) => {
                         Object.values(response.data)
-                        // console.log(response.data)
                         response.data.forEach(e => {
-                            // console.log(e)
                             if (e.p.productStateId == 1) {
                                 e.p.productStateId = "審核中"
                             } else if (e.p.productStateId == 2) {
@@ -225,15 +231,12 @@
                             } else if (e.p.productStateId == 3 && new Date(e.p.endtime) < new Date() && e.sum < e.p.targetAmount) {
                                 e.p.productStateId = "募資失敗"
                             }
-                            // console.log(response.data)
+
                             this.preproductlist = response.data
-                            setTimeout(() => loader.hide(), 0.5 * 1000);
+                            setTimeout(() => loader.hide(), 200);
                         });
-                        // this.orderlist = response.data
-                        // console.log(response.data.length)
                     })
                 axios.get(`/api/Employees/${getCookie("employeeId")}`).then(res => {
-
                     this.employeeinfo = res.data
                     console.log(this.employeeinfo)
                 })
