--- a/Fundraising/wwwroot/CMS/member.html
+++ b/Fundraising/wwwroot/CMS/member.html
@@ -62,15 +62,18 @@
                                         <div class="mb-3 col-12">
                                             <form>
                                                 <fieldset>
-                                                    <legend>查詢條件</legend>
+                                                    <legend onclick=app.enterText()>查詢條件</legend>
                                                     <div class="d-flex py-3">
                                                         <div class="">
                                                             <label class="px-3" for="">會員編號:</label>
-                                                            <input type="text" v-model="input.userId">
+                                                            <input type="text" v-model="input.userId" style="padding: 5px;">
                                                         </div>
                                                         <div class="">
-                                                            <label class="px-3" for="">會員名稱:</label>
-                                                            <input type="text" v-model="input.userName">
+                                                            <label class="px-3" for="">會員資訊:</label>
+                                                            <input type="text" v-model="input.userinfo" style="padding: 5px;" placeholder="輸入姓名 / Email / 電話">
+                                                        </div>
+                                                        <div class="ml-3">
+                                                            <a class="btn btn-success" v-on:click="inputRest">清除</a>
                                                         </div>
                                                 </fieldset>
                                             </form>
@@ -89,7 +92,7 @@
                                                     </tr>
                                                 </thead>
                                                 <tbody class="">
-                                                    <tr v-for="item in userNameChange">
+                                                    <tr v-for="item in userinfoChange">
                                                         <td v-cloak>{{item.userId}}</td>
                                                         <td v-cloak>{{item.userName}}</td>
                                                         <td v-cloak>{{item.userEmail}}</td>
@@ -122,8 +125,7 @@
 
 
                             <!-- Modal -->
-                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel"
-                                aria-hidden="true">
+                            <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
                                 <div class="modal-dialog modal-dialog-centered  ">
                                     <div class="modal-content">
                                         <div class="modal-header">
@@ -133,53 +135,58 @@
                                             </button>
                                         </div>
                                         <div class="modal-body px-3">
-                                            <div class="row  justify-content-center mb-3">
-                                                <div class="col-5 "><img class="" :src="userinfo.userPhoto" alt="" style="width: 200px;height: 150px; object-fit: cover;"></div>
-                                                <div class="col-6 ">
-                                                    <div class="">
-                                                        <label for="">會員編號:</label><br>
-                                                        <p v-cloak>{{userinfo.userId}}</p>
-                                                    </div>
-                                                    <div>
-                                                        <label for="">會員姓名:</label><br>
-                                                        <p v-cloak>{{userinfo.userName}}</p>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="row justify-content-center">
-                                                <div class="col-5">
-                                                    <div class="">
-                                                        <label for="">性別:</label><br>
-                                                        <p v-if="userinfo.userGender">男</p>
-                                                        <p v-else>女</p>
-                                                    </div>
-                                                    <div class="">
-                                                        <label for="">生日:</label><br>
-                                                        <p v-cloak>{{userinfo.userBirthday}}</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-6 ">
-                                                    <div class="">
-                                                        <label for="">會員信箱:</label><br>
-                                                        <p>userinfo.userEmail</p>
-                                                    </div>
-                                                    <div>
-                                                        <label for="">會員電話:</label><br>
-                                                        <p v-cloak>{{userinfo.userPhone}}</p>
-                                                    </div>
-                                                </div>
-                                                <div class="col-11">
-                                                    <div class="">
+                                            <div class="row  justify-content-center mb-3 px-5">
+                                                <div class="col-4 p-0"><img :src="userinfo.userPhoto"
+                                                        style="width: 150px;height: 150px;object-fit: cover;border-radius: 50%;" alt="">
+                                                    <div class="h-100">
                                                         <label for="">簡介:</label><br>
-                                                        <p v-cloak v-if="userinfo.userIntro">{{userinfo.userIntro}}</p>
-                                                        <p v-else>無</p>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px; min-height: 180px;" >{{userinfo.userIntro}}</p>
+                                                    </div>
+                                                </div>
+                                                <div class="col-8 ">
+                                                    <div class="">
+                                                        <label for="" class="mb-0">會員編號:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0">{{userinfo.userId}}</p>
+                                                    </div>
+                                                    <div>
+                                                        <label for="" class="mb-0">會員姓名:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0">{{userinfo.userName}}</p>
+                                                    </div>
+                                                    <div class="">
+                                                        <label for="" class="mb-0">性別:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0" v-if="userinfo.userGender">男</p>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0" v-else>女</p>
+                                                    </div>
+                                                    <div class="">
+                                                        <label for="" class="mb-0">生日:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0">{{userinfo.userBirthday}}</p>
+                                                    </div>
+                                                    <div class="">
+                                                        <label for="" class="mb-0">會員信箱:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0">{{userinfo.userEmail}}</p>
+                                                    </div>
+                                                    <div>
+                                                        <label for="" class="mb-0">會員電話:</label><br>
+                                                        <p style="border: 1px #80808057 solid;
+                                                        border-radius: 5px;
+                                                        padding: 5px;" class="mb-0">{{userinfo.userPhone}}</p>
                                                     </div>
                                                 </div>
                                             </div>
-                                        </div>
-                                        <div class="modal-footer">
-                                            <button type="button" class="btn btn-outline-success"
-                                                data-dismiss="modal">Close</button>
                                         </div>
                                     </div>
                                 </div>
@@ -223,12 +230,6 @@
     <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="vendor/jquery-easing/jquery.easing.min.js"></script>
     <script src="js/sb-admin-2.min.js"></script>
-
-    <!-- Chart.js 套件引入 -->
-    <!-- <script src="vendor/chart.js/Chart.min.js"></script>
-    <script src="js/demo/chart-area-demo.js"></script>
-    <script src="js/demo/chart-pie-demo.js"></script> -->
-    <!-- Chart.js 套件引入 -->
     <script>
         Vue.use(VueLoading);
 
@@ -241,7 +242,7 @@
                 employeeinfo: [],
                 input:{
                     userId:"",
-                    userName:""
+                    userinfo:""
                 },
             },
             components: {
@@ -264,8 +265,18 @@
                     axios.get(`/api/users/${index}`)
                         .then((response) => {
                             this.userinfo = response.data
+                            this.userinfo.userBirthday = this.userinfo.userBirthday.substr(0, 10)
                             console.log(response.data)
                         })
+                },
+                enterText:function(){
+                    app.input.userId = "123";
+                    app.input.userinfo= "123";
+                    
+                },
+                inputRest:function(){
+                    app.input.userId = "";
+                    app.input.userinfo= "";
                 }
             },
             computed:{
@@ -278,10 +289,16 @@
                         return this.userlist
                     }
                 },
-                userNameChange(){
-                    if(this.input.userName){
+                userinfoChange(){
+                    if(this.input.userinfo){
                         return this.userIdChange.filter(item=>{
-                            return item.userName.toLowerCase().indexOf(this.input.userName.toLowerCase()) !== -1
+                             if( item.userName.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                                return item.userName.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
+                            }else if(item.userEmail.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                                return item.userEmail.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
+                            }else if(item.userPhone.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1){
+                                return item.userPhone.toLowerCase().indexOf(this.input.userinfo.toLowerCase()) !== -1
+                            }   
                         })
                     }else{
                         return this.userIdChange
