--- a/Fundraising/wwwroot/MemberCentre/UserSetting.html
+++ b/Fundraising/wwwroot/MemberCentre/UserSetting.html
@@ -161,6 +161,7 @@
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
       crossorigin="anonymous"
     ></script>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script src="../layout/membercentre_layout.js"></script>
     <script src="./Js_src/UserSetting.js"></script>
   </body>
