--- a/Fundraising/wwwroot/MemberCentre/UserFollowing.html
+++ b/Fundraising/wwwroot/MemberCentre/UserFollowing.html
@@ -57,7 +57,7 @@
   </head>
   <style>
     .following a {
-      color: black;
+      color: rgb(33, 37, 41);
       text-decoration: none;
     }
   </style>
@@ -89,6 +89,7 @@
         </h4>
       </div>
     </div>
+    <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
