--- a/Fundraising/wwwroot/MemberCentre/UserMessage.html
+++ b/Fundraising/wwwroot/MemberCentre/UserMessage.html
@@ -24,13 +24,58 @@
       rel="stylesheet"
     />
     <style>
-      .card {
-        box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
-        width: 80%;
-        transition: 0.5s;
-        border: 0;
-        border-radius: 0.55rem;
-        position: relative;
+      @media screen and (min-width: 500px) {
+        .card {
+          box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+          width: 100%;
+          transition: 0.5s;
+          border: 0;
+          border-radius: 0.55rem;
+          position: relative;
+        }
+        .chat-app .people-list {
+          width: 260px;
+          position: absolute;
+          left: 0;
+          top: 0;
+          padding: 20px;
+          z-index: 7;
+        }
+        .chat-app .chat {
+          margin-left: 260px;
+          border-left: 1px solid #eaeaea;
+        }
+        .container,
+        .container-sm {
+          max-width: 800px;
+        }
+      }
+
+      @media screen and (min-width: 1000px) {
+        .card {
+          box-shadow: 0 1px 2px 0 rgb(0 0 0 / 10%);
+          width: 80%;
+          transition: 0.5s;
+          border: 0;
+          border-radius: 0.55rem;
+          position: relative;
+        }
+        .chat-app .people-list {
+          width: 280px;
+          position: absolute;
+          left: 0;
+          top: 0;
+          padding: 20px;
+          z-index: 7;
+        }
+        .chat-app .chat {
+          margin-left: 280px;
+          border-left: 1px solid #eaeaea;
+        }
+        .container,
+        .container-sm {
+          max-width: 1320px;
+        }
       }
     </style>
     <title>聯絡訊息</title>
@@ -42,7 +87,7 @@
         <h5 class="ms-4 mt-3">聯絡訊息</h5>
       </div>
       <!-- 聊天室 -->
-      <div class="clearfix mx-auto card my-3">
+      <div class="clearfix mx-sm-auto mx-0 card my-3">
         <div class="mt-3">
           <div class="chat-app mx-auto">
             <!-- 聊天清單 -->
@@ -106,7 +151,7 @@
                         <span class="message-data-time">{{item.sentTime}}</span>
                       </div>
                       <div
-                        class="message other-message float-right shadow-sm"
+                        class="message other-message float-right shadow-sm text-start"
                         style="max-width: 60%"
                       >
                         {{item.content}}
@@ -117,7 +162,7 @@
                         <span class="message-data-time">{{item.sentTime}}</span>
                       </div>
                       <div
-                        class="message my-message shadow-sm"
+                        class="message my-message shadow-sm text-start"
                         style="max-width: 60%"
                       >
                         {{item.content}}
