--- a/Fundraising/wwwroot/ProductPage/filter.html
+++ b/Fundraising/wwwroot/ProductPage/filter.html
@@ -236,7 +236,7 @@
 
     <script src="../layout/layout.js"></script>
     <script src="microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
-    <script>
+    <!--<script>
         // status fields and start button in UI
         var phraseDiv;
         var startRecognizeOnceAsyncButton;
@@ -310,7 +310,7 @@
                 }
             }
         });
-    </script>
+    </script>-->
 
     <script>
         //function voicesearch() {
