--- a/Fundraising/wwwroot/ProductPage/filterans.html
+++ b/Fundraising/wwwroot/ProductPage/filterans.html
@@ -142,7 +142,8 @@
         </div>
     </div>
 
-    <script src="../layout/layout.js"></script> 
+    <script src="../layout/layout.js"></script>
+    <script src="microsoft.cognitiveservices.speech.sdk.bundle.js"></script>
     <script>
 
         /*篩選*/
@@ -186,25 +187,25 @@
 
 
 
-                //Vue.createApp({
-                //    data() {
-                //        return {
-                //            fliterList: [
-                //                { "todoItemId": 1, "name": "Job A", "isComplete": true },
-                //                { "todoItemId": 2, "name": "Job B", "isComplete": false }
-                //            ]
-                //        }
-                //    },
-                //    mounted() {
-                //        axios.get('/api/Fundraising')
-                //            .then(response => (this.fliterList = response.data))
-                //    }, updated() {
-                //        this.$nextTick(function () {
-                //            //document.querySelector('.wid').style.width = "50%"
-                //        });
+                    //Vue.createApp({
+                    //    data() {
+                    //        return {
+                    //            fliterList: [
+                    //                { "todoItemId": 1, "name": "Job A", "isComplete": true },
+                    //                { "todoItemId": 2, "name": "Job B", "isComplete": false }
+                    //            ]
+                    //        }
+                    //    },
+                    //    mounted() {
+                    //        axios.get('/api/Fundraising')
+                    //            .then(response => (this.fliterList = response.data))
+                    //    }, updated() {
+                    //        this.$nextTick(function () {
+                    //            //document.querySelector('.wid').style.width = "50%"
+                    //        });
 
-                //    }
-                //}).mount('.container')
+                    //    }
+                    //}).mount('.container')
     </script>
 </body>
 
